--- a/과제2_이름검색_시스템.html
+++ b/과제2_이름검색_시스템.html
@@ -208,7 +208,7 @@
             // fdns에 필터 결과 저장.
             const fdns = nameListQuery1(names, query);
             
-            // 2) <ul> 요소
+            // <ul> 요소
             const ul = document.getElementById('resultsList');
 
             if (!query.trim()) {
@@ -228,10 +228,10 @@
             const overlay = document.getElementById('autocompleteOverlay');
             overlay.innerHTML = '';
 
-            // ① 결과 배열의 첫 항목
+            // 결과 배열의 첫 항목
             const first = fdns[0];
 
-            // ② 조건:  (a) 검색어가 있고  (b) 첫 항목이 검색어로 시작할 때
+            // 조건: (a) 검색어가 있고  (b) 첫 항목이 검색어로 시작할 때
             if (query && first &&
                 first.toLowerCase().startsWith(query.trim().toLowerCase())) {
 
