--- a/과제2_이름검색_시스템.html
+++ b/과제2_이름검색_시스템.html
@@ -351,7 +351,7 @@
                     return;
                 }
                 showModal(detail);
-            });
+            }); 
 
 
             // 브라우저 콘솔에 초기화 로그 출력.
@@ -369,7 +369,7 @@
         // 생성 및 이벤트 바인딩, 초기 검색어를 입력해주세요 UI 출력
         document.addEventListener('DOMContentLoaded', init);
     </script>
-    <!-- ▼▼▼ 더미 API: 인물 상세 정보 JSON ▼▼▼ -->
+    <!--더미 API: 인물 상세 정보 JSON-->
     <script id="personDb" type="application/json">
     {
         "Alexander": { "id": 1,  "age": 46, "email": "alexander@example.com", "city": "Columbus" },
